extra line of margin to avoid content jump
adding/removing error messages can cause what looks like a
jump in the content

the extra margin normalizes the height between form fields
to account for the space needed for a field error message

--- a/eligibility_verification/static/css/styles.css
+++ b/eligibility_verification/static/css/styles.css
@@ -56,10 +56,6 @@ footer {
     color: #046b99;
 }
 
-.form-group:nth-last-of-type(2) {
-    margin-bottom: 2rem;
-}
-
 .form-control {
     border-radius: 0.25rem;
     border-color: #212121;
@@ -77,6 +73,14 @@ footer {
 
 .required-label {
     color: #000;
+}
+
+.form-group:not(.with-errors) {
+    margin-bottom: 2.375rem;
+}
+
+.form-group:not(.with-errors):nth-last-of-type(2) {
+    margin-bottom: 3.375rem;
 }
 
 .form-group.with-errors label,
